Correct behaviour and styling of relations-collapse.

--- a/src/scss/idai-components-2.scss
+++ b/src/scss/idai-components-2.scss
@@ -38,7 +38,7 @@ html [type="button"],
 }
 
 .relations {
-	font-size: 1em;
-	font-weight: bold;
-	cursor: pointer;
+	font-size: 1em !important;
+	font-weight: bold !important;;
+	cursor: pointer !important;;
 }
